--- a/src/main/Front/css/login.css
+++ b/src/main/Front/css/login.css
@@ -1,6 +1,6 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    font-family: "Quantico", sans-serif;
+    background-color: #121212;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,7 +8,7 @@ body {
 }
 
 .form-container {
-    background-color: #fff;
+    background-color: #f5f5f5;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -37,7 +37,7 @@ input {
 button {
     padding: 10px;
     width: 48%;
-    background-color: #4CAF50;
+    background-color: #6d91d4;
     color: white;
     border: none;
     border-radius: 5px;
@@ -45,7 +45,7 @@ button {
 }
 
 button:nth-child(2) {
-    background-color: #f44336;
+    background-color: #f05151;
 }
 
 button:hover {
@@ -59,4 +59,22 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+.imgNinja {
+    height: 400px;
+    margin-left: -300px;
+}
+
+.titulo {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-40%);
+    color: #f5f5f5;
+    margin: 0;
+    font-family: "Quantico", sans-serif;
+    font-weight: 300;
+    font-size: 60px;
+    
 }
