--- a/src/main/Front/css/style.css
+++ b/src/main/Front/css/style.css
@@ -1,16 +1,52 @@
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
-    background-color: #f5f5f5;
+    background-color: #121212;
+    
 }
 
 header {
-    text-align: center;
-    margin-bottom: 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #3b3b3b;
+    width: 100vw;
+    z-index: 1000;
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.navbar ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;           /* Alinha os itens na horizontal */
+  justify-content: right;
+}
+
+.navbar li {
+  margin: 0 20px;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  padding: 15px 0;
+  display: block;
+  transition: transform 0.3s ease;
+}
+
+.navbar a:hover {
+  transform: scale(1.2);
+}
+
+
 h1 {
-    color: #333;
+    color: #f5f5f5;
+    font-size: 20px;
 }
 
 section {
@@ -18,7 +54,7 @@ section {
     padding: 15px;
     margin-bottom: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
 }
 
 ul {
