--- a/src/main/Front/css/cadProjetos.css
+++ b/src/main/Front/css/cadProjetos.css
@@ -1,5 +1,5 @@
 body {
-      font-family: Arial, sans-serif;
+      font-family: "Quantico", sans-serif;
       background-color: #f4f6f9;
       margin: 0;
       padding: 0;
