--- a/src/main/Front/css/cadTarefas.css
+++ b/src/main/Front/css/cadTarefas.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Quantico", sans-serif;
 }
 
 /* Corpo da página */
@@ -18,13 +18,13 @@ body {
 }
 
 /* Container do formulário */
-.form-container {
+.container {
+  color: #121212;
   background: #fff;
   padding: 30px 40px;
   border-radius: 12px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
-  width: 100%;
-  max-width: 600px;
+  width: 400px;
 }
 
 /* Título */
@@ -45,7 +45,7 @@ label {
   font-size: 14px;
   font-weight: 600;
   margin-bottom: 8px;
-  color: #fff;
+  color: #121212;;
 }
 
 input,
