--- a/src/main/Front/css/telaInicial.css
+++ b/src/main/Front/css/telaInicial.css
@@ -1,8 +1,7 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Quantico", sans-serif;
     margin: 20px;
     background-color: #121212;
-    
 }
 
 header {
